--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -13,6 +13,7 @@ RUN sed -i \
     -e 's|#LoadModule proxy_module modules/mod_proxy.so|LoadModule proxy_module modules/mod_proxy.so|' \
     -e 's|#LoadModule proxy_http_module modules/mod_proxy_http.so|LoadModule proxy_http_module modules/mod_proxy_http.so|' \
     -e 's|#LoadModule ratelimit_module modules/mod_ratelimit.so|LoadModule ratelimit_module modules/mod_ratelimit.so|' \
+    -e 's|#LoadModule reqtimeout_module modules/mod_reqtimeout.so|LoadModule reqtimeout_module modules/mod_reqtimeout.so|' \
     -e 's|#LoadModule ssl_module modules/mod_ssl.so|LoadModule ssl_module modules/mod_ssl.so|' \
     -e 's|#LoadModule socache_shmcb_module modules/mod_socache_shmcb.so|LoadModule socache_shmcb_module modules/mod_socache_shmcb.so|' \
     -e '/^Listen 80/d' \
@@ -94,6 +95,9 @@ ProxyPassReverse "/api/"  "https://vault/api/"
 </IfModule>
 <IfModule mpm_event_module>
     MaxRequestWorkers 100
+</IfModule>
+<IfModule reqtimeout_module>
+    RequestReadTimeout header=2-5,MinRate=2048 body=5-30,MinRate=4096
 </IfModule>
 EOF
 
