--- a/compose.yaml
+++ b/compose.yaml
@@ -18,6 +18,7 @@ services:
     user: root
     volumes:
       - /home/outsideworx/grafana:/var/lib/grafana
+      - ./grafana.ini:/etc/grafana/grafana.ini
       - *common-certificate
       - *common-certificate-private-key
   loki:
