--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,13 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>application.SpringApplication</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
