--- a/Dockerfile.site.test
+++ b/Dockerfile.site.test
@@ -13,6 +13,7 @@ RUN sed -i \
     -e 's|#LoadModule proxy_http_module modules/mod_proxy_http.so|LoadModule proxy_http_module modules/mod_proxy_http.so|' \
     -e 's|#LoadModule ratelimit_module modules/mod_ratelimit.so|LoadModule ratelimit_module modules/mod_ratelimit.so|' \
     -e 's|#LoadModule reqtimeout_module modules/mod_reqtimeout.so|LoadModule reqtimeout_module modules/mod_reqtimeout.so|' \
+    -e 's|#LoadModule unique_id_module modules/mod_unique_id.so|LoadModule unique_id_module modules/mod_unique_id.so|' \
     -e '$aInclude conf/extra/httpd-logs.conf' \
     -e '$aInclude conf/extra/httpd-proxy.conf' \
     conf/httpd.conf
@@ -22,9 +23,9 @@ RUN find conf -type f -name '*.conf' -exec sed -i \
     -e '/^[[:space:]]*ErrorLog/d' {} +
 
 RUN cat <<EOF > conf/extra/httpd-logs.conf
-ErrorLogFormat "ERROR %P --- %a: %M"
+ErrorLogFormat "ERROR %P --- requestId=%{UNIQUE_ID}e ip=%a: %M"
 ErrorLog |/usr/local/bin/send-to-loki.sh
-LogFormat " INFO %P --- %a: %r %>s" log_format
+LogFormat " INFO %P --- requestId=%{UNIQUE_ID}e ip=%a: %r %>s" log_format
 SetEnvIf Request_URI "^/metrics\.txt$" no_log
 CustomLog |/usr/local/bin/send-to-loki.sh log_format env=!no_log
 EOF
@@ -46,8 +47,10 @@ ProxyPreserveHost On
 ProxyPass        "/api/"  "http://host.docker.internal/api/"
 ProxyPassReverse "/api/"  "http://host.docker.internal/api/"
 <IfModule mod_headers.c>
-    RequestHeader set X-Caller-Id "${NAME}"
     RequestHeader set X-Auth-Token "test"
+    RequestHeader set X-Caller-Id "${NAME}"
+    RequestHeader set X-Request-Id "%{UNIQUE_ID}e"
+    Header always set X-Request-Id "%{UNIQUE_ID}e"
     Header always set X-Content-Type-Options "nosniff"
     Header always set X-Frame-Options "DENY"
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
