--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -16,6 +16,7 @@ RUN sed -i \
     -e 's|#LoadModule reqtimeout_module modules/mod_reqtimeout.so|LoadModule reqtimeout_module modules/mod_reqtimeout.so|' \
     -e 's|#LoadModule ssl_module modules/mod_ssl.so|LoadModule ssl_module modules/mod_ssl.so|' \
     -e 's|#LoadModule socache_shmcb_module modules/mod_socache_shmcb.so|LoadModule socache_shmcb_module modules/mod_socache_shmcb.so|' \
+    -e 's|#LoadModule unique_id_module modules/mod_unique_id.so|LoadModule unique_id_module modules/mod_unique_id.so|' \
     -e '/^Listen 80/d' \
     -e '$aInclude conf/extra/httpd-logs.conf' \
     -e '$aInclude conf/extra/httpd-metrics.conf' \
@@ -30,9 +31,9 @@ RUN find conf -type f -name '*.conf' -exec sed -i -E \
     -e '/^[[:space:]]*TransferLog/d' {} +
 
 RUN cat <<EOF > conf/extra/httpd-logs.conf
-ErrorLogFormat "ERROR %P --- %a: %M"
+ErrorLogFormat "ERROR %P --- requestId=%{UNIQUE_ID}e ip=%a: %M"
 ErrorLog |/usr/local/bin/send-to-loki.sh
-LogFormat " INFO %P --- %a: %r %>s" log_format
+LogFormat " INFO %P --- requestId=%{UNIQUE_ID}e ip=%a: %r %>s" log_format
 SetEnvIf Request_URI "^/metrics\.txt$" no_log
 CustomLog |/usr/local/bin/send-to-loki.sh log_format env=!no_log
 EOF
@@ -65,8 +66,10 @@ SSLProxyEngine On
 ProxyPass        "/api/"  "https://vault/api/"
 ProxyPassReverse "/api/"  "https://vault/api/"
 <IfModule mod_headers.c>
-    RequestHeader set X-Caller-Id "${NAME}"
     RequestHeader set X-Auth-Token "${TOKEN}"
+    RequestHeader set X-Caller-Id "${NAME}"
+    RequestHeader set X-Request-Id "%{UNIQUE_ID}e"
+    Header always set X-Request-Id "%{UNIQUE_ID}e"
     Header always set X-Content-Type-Options "nosniff"
     Header always set X-Frame-Options "DENY"
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
