--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -87,6 +87,8 @@ ProxyPassReverse "/api/"  "https://vault/api/"
         style-src           *       'unsafe-inline';"
 </IfModule>
 <IfModule mod_alias.c>
+    RedirectMatch 301 ^/grafana/?$ https://services.outsideworx.net/grafana
+    RedirectMatch 301 ^/login/?$   https://services.outsideworx.net/login
     RedirectMatch 403 ^/\.
     RedirectMatch 403 \.php$
     RedirectMatch 403 ^(?!/(?:metrics|robots)).*\.txt$
