--- a/Dockerfile.site.test
+++ b/Dockerfile.site.test
@@ -44,8 +44,8 @@ RUN apt update -qq && apt install -y curl; \
 RUN cat <<EOF > conf/extra/httpd-proxy.conf
 ProxyRequests Off
 ProxyPreserveHost On
-ProxyPass        "/api/"  "http://host.docker.internal/api/"
-ProxyPassReverse "/api/"  "http://host.docker.internal/api/"
+ProxyPass        "/api/" "http://host.docker.internal/api/"
+ProxyPassReverse "/api/" "http://host.docker.internal/api/"
 <IfModule mod_headers.c>
     RequestHeader set X-Auth-Token "test"
     RequestHeader set X-Caller-Id "${NAME}"
@@ -68,6 +68,8 @@ ProxyPassReverse "/api/"  "http://host.docker.internal/api/"
         style-src           *       'unsafe-inline';"
 </IfModule>
 <IfModule mod_alias.c>
+    RedirectMatch 301 ^/grafana/?$ http://localhost/grafana
+    RedirectMatch 301 ^/login/?$   http://localhost/login
     RedirectMatch 403 ^/\.
     RedirectMatch 403 \.php$
     RedirectMatch 403 ^(?!/(?:metrics|robots)).*\.txt$
