--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,10 +2,10 @@ app:
   clients:
     ciafo:
       caller: "come-in-and-find-out"
-      origin: "https://come-in-and-find-out.ch"
+      origin: "https://services.outsideworx.net:9001"
     peeps:
       caller: "gaiapeeps"
-      origin: "https://gaiapeeps.com"
+      origin: "https://services.outsideworx.net:9003"
   services:
     grafana:
       url: "https://services.outsideworx.net:3000"
